# ems3

./: README.md  breuk-test.sh
DrMemory/: stupid-output-full.txt  stupid-output.txt
Opdrachten/progs/: delay_line.cpp  delay_line_float.cpp  delay_line_tijd.cpp  emailadres.cpp  harmonisch_gemiddelde.cpp  keywords.txt  plagiaat_scanner.cpp  publish.sh  tijd1.cpp  tijd2.cpp  tijd3.cpp  timedcontains.cpp  timedsort.cpp  timedsort2.cpp  timedzme.cpp  werk1.cpp  werk2.cpp  werk3.cpp
Opdrachten/progs/buffer_1/: CMakeLists.txt  buffer.c  buffer.h  demo.c  makefile  test.c
Opdrachten/progs/buffer_8/: test_FIFO_behavior.c
Opdrachten/progs/buffer_dynamisch_udt/: buffer.h  demo.c  demo_CC3220S.c
Opdrachten/progs/cppcheck/: foutje.c  makefile
Opdrachten/progs/delay_line/: CMakeLists.txt  delay_line.cpp  delay_line.cppm  delay_line.h  test_delay_line.cpp
Opdrachten/progs/harmonisch_gemiddelde/: .gitignore  CMakeLists.txt  harmonisch_gemiddelde.cpp  harmonisch_gemiddelde.cppm  harmonisch_gemiddelde.h  run_harmonisch_gemiddelde.cpp  test_harmonisch_gemiddelde.cpp
Opdrachten/progs/io/: cin_members.cpp  cout_members.cpp  iostream.cpp  stdio.c  stdio2.c  stdio3.c
Opdrachten/progs/msp430/: main1.cpp  main1_herk.cpp  main2.cpp  main2_herk.cpp  main3.cpp  main3_herk.cpp  main_leds.cpp  msp430_reg.h  msp430_reg_herk.h
Opdrachten/progs/plagiaat_scanner/: CMakeLists.txt  identifier_extractor.cpp  identifier_extractor.cppm  identifier_extractor.h  plagiaat_scanner.cpp
Opdrachten/progs/pthread/: buffer.c  mqueue.c  mutex.c  pthread.c  pthread_par.c  pthread_philosophers.c  pthread_shared.c
Opdrachten/progs/splits_URL/: CMakeLists.txt  run_splits_URL.cpp  splits_URL.cpp  splits_URL.cppm  splits_URL.h  test_splits_URL.cpp
Opdrachten/progs/splits_emailadres/: CMakeLists.txt  run_splits_emailadres.cpp  splits_emailadres.cpp  splits_emailadres.cppm  splits_emailadres.h  test_splits_emailadres.cpp
Opdrachten/progs/string/: cppstring.cpp  cstring.c  string_append.cpp  string_size.cpp
Opdrachten/progs/temperatuur_logger/: ontvang_temperaturen.py
Opdrachten/progs/tijd1/: CMakeLists.txt  run_tijd1.cpp  test_tijd1.cpp  tijd1.cpp  tijd1.cppm  tijd1.h
Opdrachten/progs/tijd2/: CMakeLists.txt  run_tijd2.cpp  test_tijd2.cpp  tijd2.cpp  tijd2.cppm  tijd2.h
Opdrachten/progs/tijd3/: CMakeLists.txt  run_tijd3.cpp  test_tijd3.cpp  tijd3.cpp  tijd3.cppm  tijd3.h
Opdrachten/progs/timed/: CMakeLists.txt  stopwatch.cpp  timed_sort.cpp  timed_zme.cpp
Opdrachten/progs/timed2/: CMakeLists.txt  stopwatch.cppm  timed_sort2.cpp
Opdrachten/progs/timed3/: CMakeLists.txt  stopwatch.h  timed_contains.cpp
Opdrachten/progs/werk/: CMakeLists.txt  freelancer.cpp  freelancer.cppm  freelancer.h  manager.cpp  manager.cppm  manager.h  print_maandsalaris.cpp  print_maandsalaris.cppm  print_maandsalaris.h  run_werk1.cpp  run_werk2.cpp  run_werk3.cpp  stukwerker.cpp  stukwerker.cppm  stukwerker.h  test_werk.cpp  vaste_kracht.cpp  vaste_kracht.cppm  vaste_kracht.h  werknemer.cpp  werknemer.cppm  werknemer.h
Programmas/: breuk-test.sh
Programmas/Tijdsduur_met_user-defined_literals/: Tijdsduur_met_user-defined_literals.cpp
Programmas/breuk/: .gitignore  CMakeLists.txt  breuk.h  main.c
Programmas/breuk-test/: CMakeLists.txt  breuk.c  breuk.h  test_breuk.cpp
Programmas/breuk-test-ci/: bitbucket-pipelines.yml  breuk.h
Programmas/breuk-test-coverage/: CMakeLists.txt  breuk.c
Programmas/buffer_8_test/: CMakeLists.txt  test_buffer_8.cpp
Programmas/cppCheck/: foutje.c
Programmas/linked_list_dynamic/: linked_list_dynamic.c
Programmas/linked_list_dynamic_error/: linked_list_dynamic_error.c
Programmas/linked_list_static/: linked_list_static.c
Programmas/valgrindMemcheck/: stupid.c
breuk/: .gitignore  CMakeLists.txt  breuk.c  makefile
breuk-test-ci/: .gitignore  CMakeLists.txt  breuk.c  test_breuk.cpp
breuk-test-coverage/: CMakeLists.txt
cppCheck/: makefile
gitignore_CCS/: .gitignore
linked_list_dynamic/: linked_list_dynamic.c
valgrindMemcheck/: memcheck-output.txt  memcheck.c  stupid-output.txt
