cmake_minimum_required(VERSION 3.27)
project(breuk_test)
# test_breuk moet een C++ programma zijn
add_executable(test_breuk test_breuk.cpp breuk.c)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c18 -Wall -Wextra -Wpedantic -g3 -O0")
target_link_libraries(test_breuk GTest::gtest_main)
include(CTest)
find_package(GTest REQUIRED)
include(GoogleTest)
gtest_discover_tests(test_breuk)
