cmake_minimum_required(VERSION 3.27)
project(delay_line)
add_executable(test_delay_line delay_line.cpp test_delay_line.cpp)
set(CMAKE_CPP_FLAGS "${CMAKE_CPP_FLAGS} -std=c++23 -Wall -Wextra -Wpedantic -g3 -O0")
target_link_libraries(test_delay_line GTest::gtest_main)
include(CTest)
find_package(GTest REQUIRED)
include(GoogleTest)
gtest_discover_tests(test_delay_line)
