cmake_minimum_required(VERSION 4.0.0)
set(CMAKE_EXPERIMENTAL_CXX_IMPORT_STD "451f2fe2-a8a2-47c3-bc32-94786d8fc91b")
set(CMAKE_CXX_MODULE_STD ON)
set(CMAKE_CXX_STANDARD 23)
project(delay_line)
add_library(delay_line)
target_sources(delay_line PUBLIC FILE_SET CXX_MODULES FILES delay_line.cppm)
target_sources(delay_line PUBLIC delay_line.cpp)
add_executable(test_delay_line test_delay_line.cpp)
set(CMAKE_CPP_FLAGS "${CMAKE_CPP_FLAGS} -std=c++23 -Wall -Wextra -Wpedantic -g3 -O0")
target_link_libraries(test_delay_line GTest::gtest_main delay_line)
include(CTest)
find_package(GTest REQUIRED)
include(GoogleTest)
gtest_discover_tests(test_delay_line)
