cmake_minimum_required(VERSION 3.27)
project(harmonisch_gemiddelde)
add_executable(test_harmonisch_gemiddelde harmonisch_gemiddelde.cpp test_harmonisch_gemiddelde.cpp)
add_executable(run_harmonisch_gemiddelde harmonisch_gemiddelde.cpp run_harmonisch_gemiddelde.cpp)
set(CMAKE_CPP_FLAGS "${CMAKE_CPP_FLAGS} -std=c++23 -Wall -Wextra -Wpedantic -g3 -O0")
target_link_libraries(test_harmonisch_gemiddelde GTest::gtest_main)
include(CTest)
find_package(GTest REQUIRED)
include(GoogleTest)
gtest_discover_tests(test_harmonisch_gemiddelde)
