cmake_minimum_required(VERSION 4.0.0)
set(CMAKE_EXPERIMENTAL_CXX_IMPORT_STD "451f2fe2-a8a2-47c3-bc32-94786d8fc91b")
set(CMAKE_CXX_MODULE_STD ON)
set(CMAKE_CXX_STANDARD 23)
project(harmonisch_gemiddelde)
add_library(harmonisch_gemiddelde)
target_sources(harmonisch_gemiddelde PUBLIC FILE_SET CXX_MODULES FILES harmonisch_gemiddelde.cppm)
target_sources(harmonisch_gemiddelde PUBLIC harmonisch_gemiddelde.cpp)
add_executable(test_harmonisch_gemiddelde test_harmonisch_gemiddelde.cpp)
add_executable(run_harmonisch_gemiddelde run_harmonisch_gemiddelde.cpp)
set(CMAKE_CPP_FLAGS "${CMAKE_CPP_FLAGS} -std=c++23 -Wall -Wextra -Wpedantic -g3 -O0")
target_link_libraries(test_harmonisch_gemiddelde GTest::gtest_main harmonisch_gemiddelde)
target_link_libraries(run_harmonisch_gemiddelde harmonisch_gemiddelde)
include(CTest)
find_package(GTest REQUIRED)
include(GoogleTest)
gtest_discover_tests(test_harmonisch_gemiddelde)
