cmake_minimum_required(VERSION 4.0.0)
set(CMAKE_EXPERIMENTAL_CXX_IMPORT_STD "451f2fe2-a8a2-47c3-bc32-94786d8fc91b")
set(CMAKE_CXX_MODULE_STD ON)
set(CMAKE_CXX_STANDARD 23)
project(plagiaat_scanner)
add_library(identifier_extractor)
target_sources(identifier_extractor PUBLIC FILE_SET CXX_MODULES FILES identifier_extractor.cppm)
target_sources(identifier_extractor PUBLIC identifier_extractor.cpp)
add_executable(plagiaat_scanner plagiaat_scanner.cpp)
target_link_libraries(plagiaat_scanner identifier_extractor)
add_executable(plagiaat_scanner_1 plagiaat_scanner_1.cpp)
target_link_libraries(plagiaat_scanner_1 identifier_extractor)
add_executable(plagiaat_scanner_2 plagiaat_scanner_2.cpp)
target_link_libraries(plagiaat_scanner_2 identifier_extractor)
set(CMAKE_CPP_FLAGS "${CMAKE_CPP_FLAGS} -std=c++23 -Wall -Wextra -Wpedantic -g3 -O0")
