cmake_minimum_required(VERSION 3.27)
project(splits_URL)
add_executable(test_splits_URL splits_URL.cpp test_splits_URL.cpp)
add_executable(run_splits_URL splits_URL.cpp run_splits_URL.cpp)
set(CMAKE_CPP_FLAGS "${CMAKE_CPP_FLAGS} -std=c++23 -Wall -Wextra -Wpedantic -g3 -O0")
target_link_libraries(test_splits_URL GTest::gtest_main)
include(CTest)
find_package(GTest REQUIRED)
include(GoogleTest)
gtest_discover_tests(test_splits_URL)
