cmake_minimum_required(VERSION 4.0.0)
set(CMAKE_EXPERIMENTAL_CXX_IMPORT_STD "451f2fe2-a8a2-47c3-bc32-94786d8fc91b")
set(CMAKE_CXX_MODULE_STD ON)
set(CMAKE_CXX_STANDARD 23)
project(splits_URL)
add_library(splits_URL)
target_sources(splits_URL PUBLIC FILE_SET CXX_MODULES FILES splits_URL.cppm)
target_sources(splits_URL PUBLIC splits_URL.cpp)
add_executable(test_splits_URL test_splits_URL.cpp)
add_executable(run_splits_URL run_splits_URL.cpp)
set(CMAKE_CPP_FLAGS "${CMAKE_CPP_FLAGS} -std=c++23 -Wall -Wextra -Wpedantic -g3 -O0")
target_link_libraries(test_splits_URL GTest::gtest_main splits_URL)
target_link_libraries(run_splits_URL splits_URL)
include(CTest)
find_package(GTest REQUIRED)
include(GoogleTest)
gtest_discover_tests(test_splits_URL)
