cmake_minimum_required(VERSION 3.27)
project(splits_emailadres)
add_executable(test_splits_emailadres splits_emailadres.cpp test_splits_emailadres.cpp)
add_executable(run_splits_emailadres splits_emailadres.cpp run_splits_emailadres.cpp)
set(CMAKE_CPP_FLAGS "${CMAKE_CPP_FLAGS} -std=c++23 -Wall -Wextra -Wpedantic -g3 -O0")
target_link_libraries(test_splits_emailadres GTest::gtest_main)
include(CTest)
find_package(GTest REQUIRED)
include(GoogleTest)
gtest_discover_tests(test_splits_emailadres)
