cmake_minimum_required(VERSION 4.0.0)
set(CMAKE_EXPERIMENTAL_CXX_IMPORT_STD "451f2fe2-a8a2-47c3-bc32-94786d8fc91b")
set(CMAKE_CXX_MODULE_STD ON)
set(CMAKE_CXX_STANDARD 23)
project(splits_emailadres)
add_library(splits_emailadres)
target_sources(splits_emailadres PUBLIC FILE_SET CXX_MODULES FILES splits_emailadres.cppm)
target_sources(splits_emailadres PUBLIC splits_emailadres.cpp)
add_executable(test_splits_emailadres test_splits_emailadres.cpp)
add_executable(run_splits_emailadres run_splits_emailadres.cpp)
set(CMAKE_CPP_FLAGS "${CMAKE_CPP_FLAGS} -std=c++23 -Wall -Wextra -Wpedantic -g3 -O0")
target_link_libraries(test_splits_emailadres GTest::gtest_main splits_emailadres)
target_link_libraries(run_splits_emailadres splits_emailadres)
include(CTest)
find_package(GTest REQUIRED)
include(GoogleTest)
gtest_discover_tests(test_splits_emailadres)
