cmake_minimum_required(VERSION 3.27)
project(tijd1)
add_executable(test_tijd1 tijd1.cpp test_tijd1.cpp)
add_executable(run_tijd1 tijd1.cpp run_tijd1.cpp)
set(CMAKE_CPP_FLAGS "${CMAKE_CPP_FLAGS} -std=c++23 -Wall -Wextra -Wpedantic -g3 -O0")
target_link_libraries(test_tijd1 GTest::gtest_main)
include(CTest)
find_package(GTest REQUIRED)
include(GoogleTest)
gtest_discover_tests(test_tijd1)
