cmake_minimum_required(VERSION 4.0.0)
set(CMAKE_EXPERIMENTAL_CXX_IMPORT_STD "451f2fe2-a8a2-47c3-bc32-94786d8fc91b")
set(CMAKE_CXX_MODULE_STD ON)
set(CMAKE_CXX_STANDARD 23)
project(tijd2)
add_library(tijd2)
target_sources(tijd2 PUBLIC FILE_SET CXX_MODULES FILES tijd2.cppm)
target_sources(tijd2 PUBLIC tijd2.cpp)
add_executable(test_tijd2 test_tijd2.cpp)
add_executable(run_tijd2 run_tijd2.cpp)
set(CMAKE_CPP_FLAGS "${CMAKE_CPP_FLAGS} -std=c++23 -Wall -Wextra -Wpedantic -g3 -O0")
target_link_libraries(test_tijd2 GTest::gtest_main tijd2)
target_link_libraries(run_tijd2 tijd2)
include(CTest)
find_package(GTest REQUIRED)
include(GoogleTest)
gtest_discover_tests(test_tijd2)
