cmake_minimum_required(VERSION 3.27)
project(tijd3)
add_executable(test_tijd3 tijd3.cpp test_tijd3.cpp)
add_executable(run_tijd3 tijd3.cpp run_tijd3.cpp)
set(CMAKE_CPP_FLAGS "${CMAKE_CPP_FLAGS} -std=c++23 -Wall -Wextra -Wpedantic -g3 -O0")
target_link_libraries(test_tijd3 GTest::gtest_main)
include(CTest)
find_package(GTest REQUIRED)
include(GoogleTest)
gtest_discover_tests(test_tijd3)
