cmake_minimum_required(VERSION 4.0.0)
set(CMAKE_EXPERIMENTAL_CXX_IMPORT_STD "451f2fe2-a8a2-47c3-bc32-94786d8fc91b")
set(CMAKE_CXX_MODULE_STD ON)
set(CMAKE_CXX_STANDARD 23)
project(timed)
add_library(stopwatch)
target_sources(stopwatch PUBLIC FILE_SET CXX_MODULES FILES stopwatch.cppm)
target_sources(stopwatch PUBLIC stopwatch.cpp)
add_executable(timed_sort timed_sort.cpp)
target_link_libraries(timed_sort stopwatch)
add_executable(timed_zme timed_zme.cpp)
target_link_libraries(timed_zme stopwatch)
set(CMAKE_CPP_FLAGS "${CMAKE_CPP_FLAGS} -std=c++23 -Wall -Wextra -Wpedantic -g3 -O0")
