cmake_minimum_required(VERSION 3.27)
project(werk)
add_executable(test_werk werknemer.cpp freelancer.cpp vaste_kracht.cpp print_maandsalaris.cpp test_werk.cpp)
add_executable(run_werk1 werknemer.cpp freelancer.cpp vaste_kracht.cpp print_maandsalaris.cpp run_werk1.cpp)
set(CMAKE_CPP_FLAGS "${CMAKE_CPP_FLAGS} -std=c++23 -Wall -Wextra -Wpedantic -g3 -O0")
target_link_libraries(test_werk GTest::gtest_main)
include(CTest)
find_package(GTest REQUIRED)
include(GoogleTest)
gtest_discover_tests(test_werk)
