cmake_minimum_required(VERSION 4.0.0)
set(CMAKE_EXPERIMENTAL_CXX_IMPORT_STD "451f2fe2-a8a2-47c3-bc32-94786d8fc91b")
set(CMAKE_CXX_MODULE_STD ON)
set(CMAKE_CXX_STANDARD 23)
project(werk)
add_library(werknemer)
target_sources(werknemer PUBLIC FILE_SET CXX_MODULES FILES werknemer.cppm)
target_sources(werknemer PUBLIC werknemer.cpp)
add_library(freelancer)
target_sources(freelancer PUBLIC FILE_SET CXX_MODULES FILES freelancer.cppm werknemer.cppm)
target_sources(freelancer PUBLIC freelancer.cpp)
add_library(vaste_kracht)
target_sources(vaste_kracht PUBLIC FILE_SET CXX_MODULES FILES vaste_kracht.cppm werknemer.cppm)
target_sources(vaste_kracht PUBLIC vaste_kracht.cpp)
add_library(print_maandsalaris)
target_sources(print_maandsalaris PUBLIC FILE_SET CXX_MODULES FILES print_maandsalaris.cppm werknemer.cppm)
target_sources(print_maandsalaris PUBLIC print_maandsalaris.cpp)
add_executable(run_werk1 run_werk1.cpp)
add_executable(test_werk test_werk.cpp)
set(CMAKE_CPP_FLAGS "${CMAKE_CPP_FLAGS} -std=c++23 -Wall -Wextra -Wpedantic -g3 -O0")
target_link_libraries(run_werk1 werknemer freelancer vaste_kracht print_maandsalaris)
target_link_libraries(test_werk GTest::gtest_main werknemer freelancer vaste_kracht print_maandsalaris)
include(CTest)
find_package(GTest REQUIRED)
include(GoogleTest)
gtest_discover_tests(test_werk)
